# solar-and-sundry

./: README.md
api/: .dockerignore  .env  Cargo.toml  Dockerfile  fly.toml
api/scripts/: page_json_to_sql.py
api/src/: main.rs
api/src/data/: chapter.rs  dto.rs  mod.rs  page.rs
site/: README.md  package.json
site/src/: app.d.ts  app.html
site/src/lib/components/: Button.svelte  ComicControls.svelte  SideBar.svelte  TableOfContents.svelte  TopBar.svelte
site/src/lib/schemas/: chapter.ts  page.ts
site/src/lib/stores/: pageNumber.ts
site/src/lib/util/: expect.ts
site/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
site/src/routes/about/: +page.svelte
site/src/routes/comic/[number]/: +page.svelte
site/src/routes/page/[number]/: +page.svelte
site/static/: index.css
worker/: .gitignore  Cargo.toml  README.md  swagger.yml  wrangler.toml
worker/src/: data.rs  lib.rs
