[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["headers", "macros"] }
chrono = { version = "0.4.31", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.193", features = ["derive"] }
tokio = { version = "1.34.0", features = ["rt-multi-thread", "macros", "signal"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.4.1"
libsql = { git = "https://github.com/tursodatabase/libsql", default-features = false, features = ["remote"] }
itertools = "0.12.0"
